--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,11 +6,6 @@ html {
   scroll-behavior: smooth;
 }
 
-.image-gallery-content .image-gallery-slide .image-gallery-image {
-  object-fit: cover;
-  border-radius: 0px;
-}
-
 .inline-link {
   color: #EC4899;
   text-decoration: none;
@@ -18,6 +13,18 @@ html {
   box-shadow: inset 0 -.125em 0 0 #fff,
     inset 0 -.375em 0 0 rgba(255, 207, 232, 1);
 }
+
+.image-gallery-content .image-gallery-slide .image-gallery-image {
+  object-fit: cover;
+  border-radius: 0px;
+}
+
+@media (min-width: 1280px) {
+  .image-gallery-content .image-gallery-slide .image-gallery-image {
+    border-radius: 5px;
+  }
+}
+
 
 @media (max-width: 768px) {
 
@@ -38,66 +45,4 @@ html {
 .image-gallery-fullscreen-button,
 .image-gallery-play-button {
   padding: 32px !important;
-}
-
-/* Fonts */
-
-/* eb-garamond-regular - latin */
-@font-face {
-  font-family: 'EB Garamond';
-  font-style: normal;
-  font-weight: 400;
-  src: local(''),
-    url('/fonts/eb-garamond-v15-latin-regular.woff2') format('woff2'),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */
-    url('/fonts/eb-garamond-v15-latin-regular.woff') format('woff');
-  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-/* eb-garamond-600 - latin */
-@font-face {
-  font-family: 'EB Garamond';
-  font-style: normal;
-  font-weight: 600;
-  src: local(''),
-    url('/fonts/eb-garamond-v15-latin-600.woff2') format('woff2'),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */
-    url('/fonts/eb-garamond-v15-latin-600.woff') format('woff');
-  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-/* eb-garamond-500 - latin */
-@font-face {
-  font-family: 'EB Garamond';
-  font-style: normal;
-  font-weight: 500;
-  src: local(''),
-    url('/fonts/eb-garamond-v15-latin-500.woff2') format('woff2'),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */
-    url('/fonts/eb-garamond-v15-latin-500.woff') format('woff');
-  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-/* eb-garamond-700 - latin */
-@font-face {
-  font-family: 'EB Garamond';
-  font-style: normal;
-  font-weight: 700;
-  src: local(''),
-    url('/fonts/eb-garamond-v15-latin-700.woff2') format('woff2'),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */
-    url('/fonts/eb-garamond-v15-latin-700.woff') format('woff');
-  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-/* eb-garamond-800 - latin */
-@font-face {
-  font-family: 'EB Garamond';
-  font-style: normal;
-  font-weight: 800;
-  src: local(''),
-    url('/fonts/eb-garamond-v15-latin-800.woff2') format('woff2'),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */
-    url('/fonts/eb-garamond-v15-latin-800.woff') format('woff');
-  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
